# Audio-Positioning-Models-Demo

./: .gitignore  CMakeLists.txt  README.md  SpacialAudio.jucer  TODO.md
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/SpacialAudio.xcodeproj/: project.pbxproj
Builds/VisualStudio2019/: SpacialAudio.sln  SpacialAudio_App.vcxproj  SpacialAudio_App.vcxproj.filters  SpacialAudio_DynamicLibrary.vcxproj  SpacialAudio_DynamicLibrary.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: 2D_View_Subpanel.cpp  2D_View_Subpanel.h  Audio_Helper.h  Control_Panel.cpp  Control_Panel.h  DBAP.cpp  DBAP.h  DBAP_Control_Subpanel.cpp  DBAP_Control_Subpanel.h  Input_Label.cpp  Input_Label.h  Listener_Component.cpp  Listener_Component.h  MDAP.cpp  MDAP.h  MDAP_Control_Subpanel.cpp  MDAP_Control_Subpanel.h  Main.cpp  MainComponent.cpp  MainComponent.h  Model_Manager.cpp  Model_Manager.h  Panel_Base.cpp  Panel_Base.h  Parameters.h  PositionControl_Panel.cpp  PositionControl_Panel.h  PresetManager.cpp  PresetManager.h  SoundSource_Component.cpp  SoundSource_Component.h  Speaker_Component.cpp  Speaker_Component.h  TODO.h  UI_Dimensions.h  VBAP.cpp  VBAP.h  VBAP_Control_Subpanel.cpp  VBAP_Control_Subpanel.h  View_Component_Base.cpp  (+3 more)
Source/Models/: DBAP.cpp  DBAP.h  Listener_Component.cpp  Listener_Component.h  MDAP.cpp  MDAP.h  Model_Manager.cpp  Model_Manager.h  SoundSource_Component.cpp  SoundSource_Component.h  Speaker_Component.cpp  Speaker_Component.h  VBAP.cpp  VBAP.h
Source/Other/: Audio_Helper.h  Parameters.h  PresetManager.cpp  PresetManager.h
Source/UI/: 2D_View_Subpanel.cpp  2D_View_Subpanel.h  Control_Panel.cpp  Control_Panel.h  DBAP_Control_Subpanel.cpp  DBAP_Control_Subpanel.h  Input_Label.cpp  Input_Label.h  MDAP_Control_Subpanel.cpp  MDAP_Control_Subpanel.h  Panel_Base.cpp  Panel_Base.h  PositionControl_Panel.cpp  PositionControl_Panel.h  UI_Dimensions.h  VBAP_Control_Subpanel.cpp  VBAP_Control_Subpanel.h  View_Component_Base.cpp  View_Component_Base.h  View_Panel.cpp  View_Panel.h
